[package]
name = "rsx-dom"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

[lib]
name = "rsx_dom"

[features]
default = ["rsx-parse", "vec-arena"]
rsx-parse = ["rsx-parser"]
vec-arena = ["rsx-tree/vec-arena"]
hashmap-arena = ["rsx-tree/hashmap-arena"]

[dependencies]
fnv = "1.0.6"
rsx-shared = { git = "https://github.com/victorporof/rsx-shared.git", default-features = false }
rsx-tree = { path = "../rsx-tree", default-features = false }
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"

# Optional
rsx-parser = { git = "https://github.com/victorporof/rsx-parser.git", default-features = false, optional = true }

[dev-dependencies]
rsx-shared = { git = "https://github.com/victorporof/rsx-shared.git", default-features = false, features = ["impl-dummy"] }
quote = "0.3.15"
syn = { version = "0.11.11", features = ["full"] }
